Se agrega WebView para mostrar la cámara

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,4 +71,9 @@
             android:layout_gravity="center_vertical" />
     </LinearLayout>
 
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
 </LinearLayout>
