--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,13 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:weightSum="1">
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:paddingTop="0dip">
 
         <TextView
@@ -25,12 +25,6 @@
             android:layout_height="wrap_content"
             android:padding="20dip"
             android:layout_gravity="center_vertical" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
@@ -38,21 +32,13 @@
             android:text="Right Stick:"
             android:id="@+id/right_stick_label"
             android:textSize="20sp"
-            android:paddingStart="15dip"
-            android:layout_gravity="center_vertical" />
+            android:paddingStart="15dip" />
 
         <TextView
             android:id="@+id/right_stick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dip"
-            android:layout_gravity="center_vertical" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            android:padding="20dip" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -60,15 +46,13 @@
             android:text="D-Pad:"
             android:id="@+id/dpad_stick_label"
             android:textSize="20sp"
-            android:paddingStart="15dip"
-            android:layout_gravity="center_vertical" />
+            android:paddingStart="15dip" />
 
         <TextView
             android:id="@+id/dpad_stick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dip"
-            android:layout_gravity="center_vertical" />
+            android:padding="20dip" />
     </LinearLayout>
 
     <WebView
